新しいインタフェースに対応